--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap-4-grid": "^3.4.0",
-    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^1.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
