--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "grapp",
   "version": "0.1.0",
   "private": true,
+  "main": "main/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -21,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "desktop": "nodemon --watch * --exec \"electron . --debug\""
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^11.2.1"
   }
 }
