--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "desktop": "nodemon --watch * --exec \"electron . --debug\""
+    "desktop": "nodemon --watch main/* --exec \"electron . --debug\""
   },
   "eslintConfig": {
     "extends": [
