--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "react-transition-group": "^1.2.1",
-    "simple-react-validator": "^1.6.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "web-vitals": "^0.2.4"
+    "simple-react-validator": "^1.6.0",
+    "web-vitals": "^0.2.4",
+    "sqlite3": "5.0.0",
+    "sequelize": "^6.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
