--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "bootstrap-4-grid": "^3.4.0",
+    "md5": "^2.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -15,10 +17,10 @@
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "sequelize": "^6.3.5",
     "simple-react-validator": "^1.6.0",
-    "web-vitals": "^0.2.4",
     "sqlite3": "5.0.0",
-    "sequelize": "^6.3.5"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
